Возврат на джава 8 и спринг 2.5.0